styles/style.css
.header {
  display: grid;
  grid-template-columns: 1fr min-content 1fr;
  align-items: center;
  height: 293px;
  padding: 50px;
  font-size: 18px;
}

.header__menu {
  width: 392px;
}

.header__menu-list {
  display: flex;
  justify-content: space-between;
  list-style: circle;
}

.header__menu-item:first-child {
  list-style: none;
}

.header__menu-item_active .header__menu-link {
  text-decoration: none;
}

.header__logo {
  width: 148px;
  height: 105px;
}

.address {
  max-width: 240px;
  font-style: normal;
}

.header__address {
  justify-self: end;
}

.cover {
  position: relative;
  justify-self: end;
  height: 757px;
  margin-bottom: 120px;
  padding: 165px 50px 50px;
  background-image: url("/images/cover.jpg");
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
}

.cover_foreground {
  position: relative;
  z-index: 1;
}

.cover__title {
  margin-bottom: 106px;
  color: white;
}

.aligned-text {
  display: block;
  font-weight: 700;
  font-size: 100px;
  line-height: 1.15;
}

.letter-spacing-extended {
  letter-spacing: 0.3em;
}

.aligned-text_center {
  text-align: center;
}

.aligned-text_right {
  text-align: right;
}

.no-letter-spacing {
  letter-spacing: 0;
}

.overlay {
  position: absolute;
  inset: 0;
  width: 100%;
  background: rgba(0, 0, 0, 0.6);
}

.cover__description {
  display: flex;
  justify-content: space-between;
  height: 51px;
  font-size: 22px;
}

.cover__description-text {
  align-self: center;
  color: white;
  line-height: 28px;
  text-transform: uppercase;
  word-spacing: 0.9em;
}

.bet_button {
  width: 256px;
  border: 1px solid white;
  border-radius: 0;
  color: white;
  text-transform: uppercase;
  background: rgba(0, 0, 0, 0);
  transition: all 0.5s ease;
}

.bet_button:hover {
  color: black;
  background: white;
}

.lots {
  display: flex;
  flex-direction: column;
  margin: 60px 24px;
}

.lots__heading {
  margin-bottom: 27px;
  margin-left: 40px;
  font-size: 40px;
  text-transform: uppercase;
}

.lots__card-list {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  gap: 25px;
  list-style-type: none;
}

.lots__card-list-item {
  position: relative;
  width: 334px;
  min-height: 596px;
}

.card-link,
.card {
  height: 100%;
}

.card {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  padding: 48px 40px;
  color: white;
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
}

.first_card {
  background-image: url("/images/card-lot-01.jpg");
}

.second_card {
  background-image: url("/images/card-lot-02.jpg");
}

.third_card {
  background-image: url("/images/card-lot-03.jpg");
}

.card__title,
.card__text {
  position: relative;
  z-index: 1;
}

.card__title {
  font-weight: 700;
  font-size: 22px;
  text-decoration: underline;
  text-transform: uppercase;
}

.card__text,
.lots__look-more-link {
  font-size: 20px;
}

.lots__look-more-link {
  margin-top: 30px;
  margin-left: 40px;
  text-transform: lowercase;
}

.about {
  display: grid;
  grid-template-columns: 334px 1fr;
  height: 595px;
  margin: 60px 24px;
}

.about__column {
  display: flex;
  flex-direction: column;
}

.about__logo {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 240px;
  height: 240px;
  margin-top: 35px;
  margin-left: 47px;
  border-radius: 50%;
  background-color: black;
}

.about__logo-image {
  width: 148px;
  height: 105px;
}

.about__title {
  margin-top: 136px;
  margin-left: 25px;
  font-weight: 700;
  font-size: 40px;
  text-transform: uppercase;
}

.about__text {
  margin-top: 100px;
  margin-left: 25px;
  font-size: 20px;
  line-height: 24px;
}

.about__text:nth-child(2) {
  margin-top: 24px;
}

.footer {
  display: grid;
  grid-template-columns: 1fr max-content 1fr;
  margin-top: 120px;
  padding: 0 50px 82px;
  font-size: 18px;
}

.footer__menu-list {
  display: flex;
  flex-direction: column;
  align-items: center;
  list-style: none;
}

.footer__menu-item_active .footer__menu-link {
  text-decoration: none;
}

.footer__social-list {
  display: flex;
  justify-content: space-between;
  margin-left: 177.5px;
  list-style: none;
}

.footer__social-list-item {
  width: 48px;
  height: 48px;
}

